# -CS202-SuperMario

./: .gitignore  CMakeLists.txt  README.md
include/: animation.h  animation_effect.h  animation_effect_creator.h  background.h  bounce_block.h  camera.h  character.h  character_creator.h  contactlistener.h  delayed_texture.h  drawer.h  effect_manager.h  enemy_creator.h  file_check_helper.h  file_visitor.h  game.h  game_state.h  image.h  imagehandler.h  include.h  included_library.h  kinematic_tile.h  mouse_click_to_empty_space_handler.h  moving_object.h  moving_platform.h  multiplayer_player_handler.h  multiplayer_position_handler.h  my_bounding_box.h  object.h  object_creator.h  object_factory.h  physics.h  player_input_set.h  renderer.h  scene_node.h  sound_effect_handler.h  stage_state_handler.h  static_object.h  static_tile.h  string_mode.h  (+5 more)
resources/: data.json
resources/save/: save.txt  save1.txt
resources/savegames/: slot1.txt  slot2.txt  slot3.txt  slot4.txt  slot5.txt
resources/tilemaps/: map-1-1.json  map-1-2-1.json  map-1-2-2.json  map-1-2-3.json  map-1-2.json  map-1-3.json  map-1-4.json  map-1-5-1.json  map-1-5-2.json  map-1-5-3.json  map-2-1.json  map-2-2.json  map-2-3.json  map-2-4.json  map-3-1.json  map-3-2.json  map-3-3.json  map-3-4.json  map-8-4-1.json  map-8-4-2.json  map-8-4-3.json  map-8-4.json  map-test.json  map-tutorial.json  tutorial1.tsx
resources/tilesets/: Castle.json  OverWorld.json  Re_draw.json  SMW_tileset.json  Sprite.json  bg-1-2.json  bg-1-3.json  bg-1-4.json  bg-2-1.json  bg-2-2.json  bg-2-3.json  bg-2-4.json  bg-3-1.json  bg-3-2.json  bg-3-3.json  bg-3-4.json  bg-8-4.json  ghosthouse.json  items-objects.json  tiles-2.json  tree.json  tutorial.json
src/: active_item.cpp  animation.cpp  animation_effect.cpp  animation_effect_creator.cpp  background.cpp  camera.cpp  character.cpp  character_creator.cpp  contactlistener.cpp  delayed_texture.cpp  drawer.cpp  effect_manager.cpp  enemy.cpp  enemy_creator.cpp  file_check_helper.cpp  file_visitor.cpp  game.cpp  game_state.cpp  imagehandler.cpp  imagehandler.h  kinematic_tile.cpp  main.cpp  mouse_click_to_empty_space_handler.cpp  moving_object.cpp  moving_platform.cpp  multiplayer_player_handler.cpp  multiplayer_position_handler.cpp  my_bounding_box.cpp  object_creator.cpp  object_factory.cpp  physics.cpp  player.cpp  player_input_set.cpp  renderer.cpp  sound_effect_handler.cpp  stage_state_handler.cpp  static_object.cpp  static_tile.cpp  string_mode.cpp  testing_file.cpp  (+5 more)
